--- a/css/style.css
+++ b/css/style.css
@@ -2363,3 +2363,7 @@ section.inner_banner h1 {
 	background: #B4B4B4;
 	color: #285DA2;
 }
+
+.table_border table tr th,
+
+.table_border table tr td{border: 1px solid black;padding: 10px;}
